--- a/round4.html
+++ b/round4.html
@@ -11,11 +11,49 @@
     <h1>Round 4: Throwback Party</h1>
   </header>
   <main>
-    <p>Play the clips and guess the throwback hits!</p>
-    <!-- Add play/pause buttons and audio clips here -->
+    <p>Guess the year these throwback hits were released!</p>
+    <div class="audio-buttons">
+      <!-- Buttons for each audio clip -->
+      <div class="audio-control" id="clip1">
+        <div class="clip-label">Clip 1:</div>
+        <button class="play-pause" onclick="togglePlayPause('clip1')">
+          <span class="icon">▶</span>
+        </button>
+        <audio id="audio1" src="assets/audio/round4/clip1.mp3"></audio>
+      </div>
+      <div class="audio-control" id="clip2">
+        <div class="clip-label">Clip 2:</div>
+        <button class="play-pause" onclick="togglePlayPause('clip2')">
+          <span class="icon">▶</span>
+        </button>
+        <audio id="audio2" src="assets/audio/round4/clip2.mp3"></audio>
+      </div>
+      <div class="audio-control" id="clip3">
+        <div class="clip-label">Clip 3:</div>
+        <button class="play-pause" onclick="togglePlayPause('clip3')">
+          <span class="icon">▶</span>
+        </button>
+        <audio id="audio3" src="assets/audio/round4/clip3.mp3"></audio>
+      </div>
+      <div class="audio-control" id="clip4">
+        <div class="clip-label">Clip 4:</div>
+        <button class="play-pause" onclick="togglePlayPause('clip4')">
+          <span class="icon">▶</span>
+        </button>
+        <audio id="audio4" src="assets/audio/round4/clip4.mp3"></audio>
+      </div>
+      <div class="audio-control" id="clip5">
+        <div class="clip-label">Clip 5:</div>
+        <button class="play-pause" onclick="togglePlayPause('clip5')">
+          <span class="icon">▶</span>
+        </button>
+        <audio id="audio5" src="assets/audio/round4/clip5.mp3"></audio>
+      </div>
+    </div>
   </main>
   <footer>
     <a href="tiebreaker.html" class="next-button">Tie-Breaker</a>
   </footer>
+  <script src="assets/js/script.js"></script>
 </body>
 </html>
