--- a/tiebreaker.html
+++ b/tiebreaker.html
@@ -12,10 +12,20 @@
   </header>
   <main>
     <p>Play the final clip and decide the winner!</p>
-    <!-- Add play/pause buttons and audio clips here -->
+    <div class="audio-buttons">
+      <!-- Button for the single audio clip -->
+      <div class="audio-control" id="clip1">
+        <div class="clip-label">Tie-Breaker Clip:</div>
+        <button class="play-pause" onclick="togglePlayPause('clip1')">
+          <span class="icon">▶</span>
+        </button>
+        <audio id="audio1" src="assets/audio/tiebreaker/clip1.mp3"></audio>
+      </div>
+    </div>
   </main>
   <footer>
     <a href="index.html" class="next-button">Back to Home</a>
   </footer>
+  <script src="assets/js/script.js"></script>
 </body>
 </html>
