refactor: Use the id on the audio element to prepare for round 2

--- a/round1.html
+++ b/round1.html
@@ -14,75 +14,75 @@
     <p>Play the clips and guess the song title!</p>
     <div class="audio-buttons">
       <!-- Buttons for each audio clip -->
-      <div class="audio-control" id="clip1">
+      <div class="audio-control">
         <div class="clip-label">Clip 1:</div>
         <button class="play-pause" onclick="togglePlayPause('clip1')">
           <span class="icon">▶</span>
         </button>
-        <audio id="audio1" src="assets/audio/round1/clip1.mp3"></audio>
+        <audio id="clip1" src="assets/audio/round1/clip1.mp3"></audio>
       </div>
-      <div class="audio-control" id="clip2">
+      <div class="audio-control">
         <div class="clip-label">Clip 2:</div>
         <button class="play-pause" onclick="togglePlayPause('clip2')">
           <span class="icon">▶</span>
         </button>
-        <audio id="audio2" src="assets/audio/round1/clip2.mp3"></audio>
+        <audio id="clip2" src="assets/audio/round1/clip2.mp3"></audio>
       </div>
-      <div class="audio-control" id="clip3">
+      <div class="audio-control">
         <div class="clip-label">Clip 3:</div>
         <button class="play-pause" onclick="togglePlayPause('clip3')">
           <span class="icon">▶</span>
         </button>
-        <audio id="audio3" src="assets/audio/round1/clip3.mp3"></audio>
+        <audio id="clip3" src="assets/audio/round1/clip3.mp3"></audio>
       </div>
-      <div class="audio-control" id="clip4">
+      <div class="audio-control">
         <div class="clip-label">Clip 4:</div>
         <button class="play-pause" onclick="togglePlayPause('clip4')">
           <span class="icon">▶</span>
         </button>
-        <audio id="audio4" src="assets/audio/round1/clip4.mp3"></audio>
+        <audio id="clip4" src="assets/audio/round1/clip4.mp3"></audio>
       </div>
-      <div class="audio-control" id="clip5">
+      <div class="audio-control">
         <div class="clip-label">Clip 5:</div>
         <button class="play-pause" onclick="togglePlayPause('clip5')">
           <span class="icon">▶</span>
         </button>
-        <audio id="audio5" src="assets/audio/round1/clip5.mp3"></audio>
+        <audio id="clip5" src="assets/audio/round1/clip5.mp3"></audio>
       </div>
-      <div class="audio-control" id="clip6">
+      <div class="audio-control">
         <div class="clip-label">Clip 6:</div>
         <button class="play-pause" onclick="togglePlayPause('clip6')">
           <span class="icon">▶</span>
         </button>
-        <audio id="audio6" src="assets/audio/round1/clip6.mp3"></audio>
+        <audio id="clip6" src="assets/audio/round1/clip6.mp3"></audio>
       </div>
-      <div class="audio-control" id="clip7">
+      <div class="audio-control">
         <div class="clip-label">Clip 7:</div>
         <button class="play-pause" onclick="togglePlayPause('clip7')">
           <span class="icon">▶</span>
         </button>
-        <audio id="audio7" src="assets/audio/round1/clip7.mp3"></audio>
+        <audio id="clip7" src="assets/audio/round1/clip7.mp3"></audio>
       </div>
-      <div class="audio-control" id="clip8">
+      <div class="audio-control">
         <div class="clip-label">Clip 8:</div>
         <button class="play-pause" onclick="togglePlayPause('clip8')">
           <span class="icon">▶</span>
         </button>
-        <audio id="audio8" src="assets/audio/round1/clip8.mp3"></audio>
+        <audio id="clip8" src="assets/audio/round1/clip8.mp3"></audio>
       </div>
-      <div class="audio-control" id="clip9">
+      <div class="audio-control">
         <div class="clip-label">Clip 9:</div>
         <button class="play-pause" onclick="togglePlayPause('clip9')">
           <span class="icon">▶</span>
         </button>
-        <audio id="audio9" src="assets/audio/round1/clip9.mp3"></audio>
+        <audio id="clip9" src="assets/audio/round1/clip9.mp3"></audio>
       </div>
-      <div class="audio-control" id="clip10">
+      <div class="audio-control" >
         <div class="clip-label">Clip 10:</div>
         <button class="play-pause" onclick="togglePlayPause('clip10')">
           <span class="icon">▶</span>
         </button>
-        <audio id="audio10" src="assets/audio/round1/clip10.mp3"></audio>
+        <audio id="clip10" src="assets/audio/round1/clip10.mp3"></audio>
       </div>
     </div>
   </main>
