--- a/tiebreaker.html
+++ b/tiebreaker.html
@@ -14,12 +14,12 @@
     <p>Play the final clip and decide the winner!</p>
     <div class="audio-buttons">
       <!-- Button for the single audio clip -->
-      <div class="audio-control" id="clip1">
+      <div class="audio-control">
         <div class="clip-label">Tie-Breaker Clip:</div>
         <button class="play-pause" onclick="togglePlayPause('clip1')">
           <span class="icon">▶</span>
         </button>
-        <audio id="audio1" src="assets/audio/tiebreaker/clip1.mp3"></audio>
+        <audio id="clip1" src="assets/audio/tiebreaker/clip1.mp3"></audio>
       </div>
     </div>
   </main>
