--- a/round2.html
+++ b/round2.html
@@ -12,10 +12,73 @@
   </header>
   <main>
     <p>Play the clips and finish the lyrics!</p>
-    <!-- Add play/pause buttons and audio clips here -->
+    <div class="audio-buttons">
+      <!-- Buttons for each clip -->
+      <div class="audio-control" id="clip1">
+        <div class="clip-label">Clip 1:</div>
+        <button class="play-pause" onclick="togglePlayPause('clip1-lead')">
+          <span class="icon">▶</span>
+        </button>
+        <audio id="audio1-lead" src="assets/audio/round2/clip1-lead.mp3"></audio>
+        <div class="clip-label">Reveal:</div>
+        <button class="play-pause" onclick="togglePlayPause('clip1-answer')">
+          <span class="icon">▶</span>
+        </button>
+        <audio id="audio1-answer" src="assets/audio/round2/clip1-answer.mp3"></audio>
+      </div>
+      <div class="audio-control" id="clip2">
+        <div class="clip-label">Clip 2:</div>
+        <button class="play-pause" onclick="togglePlayPause('clip2-lead')">
+          <span class="icon">▶</span>
+        </button>
+        <audio id="audio2-lead" src="assets/audio/round2/clip2-lead.mp3"></audio>
+        <div class="clip-label">Reveal:</div>
+        <button class="play-pause" onclick="togglePlayPause('clip2-answer')">
+          <span class="icon">▶</span>
+        </button>
+        <audio id="audio2-answer" src="assets/audio/round2/clip2-answer.mp3"></audio>
+      </div>
+      <div class="audio-control" id="clip3">
+        <div class="clip-label">Clip 3:</div>
+        <button class="play-pause" onclick="togglePlayPause('clip3-lead')">
+          <span class="icon">▶</span>
+        </button>
+        <audio id="audio3-lead" src="assets/audio/round2/clip3-lead.mp3"></audio>
+        <div class="clip-label">Reveal:</div>
+        <button class="play-pause" onclick="togglePlayPause('clip3-answer')">
+          <span class="icon">▶</span>
+        </button>
+        <audio id="audio3-answer" src="assets/audio/round2/clip3-answer.mp3"></audio>
+      </div>
+      <div class="audio-control" id="clip4">
+        <div class="clip-label">Clip 4:</div>
+        <button class="play-pause" onclick="togglePlayPause('clip4-lead')">
+          <span class="icon">▶</span>
+        </button>
+        <audio id="audio4-lead" src="assets/audio/round2/clip4-lead.mp3"></audio>
+        <div class="clip-label">Reveal:</div>
+        <button class="play-pause" onclick="togglePlayPause('clip4-answer')">
+          <span class="icon">▶</span>
+        </button>
+        <audio id="audio4-answer" src="assets/audio/round2/clip4-answer.mp3"></audio>
+      </div>
+      <div class="audio-control" id="clip5">
+        <div class="clip-label">Clip 5:</div>
+        <button class="play-pause" onclick="togglePlayPause('clip5-lead')">
+          <span class="icon">▶</span>
+        </button>
+        <audio id="audio5-lead" src="assets/audio/round2/clip5-lead.mp3"></audio>
+        <div class="clip-label">Reveal:</div>
+        <button class="play-pause" onclick="togglePlayPause('clip5-answer')">
+          <span class="icon">▶</span>
+        </button>
+        <audio id="audio5-answer" src="assets/audio/round2/clip5-answer.mp3"></audio>
+      </div>
+    </div>
   </main>
   <footer>
     <a href="round3.html" class="next-button">Next Round</a>
   </footer>
+  <script src="assets/js/script.js"></script>
 </body>
 </html>
